More javadoc fixes